[gd_scene load_steps=3 format=3 uid="uid://e5byije8qotb"]

[ext_resource type="Script" path="res://Scenes/UI/pause_menu.gd" id="1_r6ycr"]
[ext_resource type="Theme" uid="uid://dejvr5rqllmfx" path="res://Aesthethics/button.tres" id="2_6ekna"]

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.215686)
script = ExtResource("1_r6ycr")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6ekna")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Resume"

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Retry"

[node name="MapScreenButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Map Screen"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MapScreenButton" to="." method="_on_map_screen_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
